# android-feature-matching

./: .gitmodules  gradlew.bat  settings.gradle
app/: build.gradle
app/libs/: renderscript-toolkit-debug.aar
app/src/androidTest/java/com/mag/featurematching/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mag/featurematching/: App.kt  MainActivity.kt
app/src/main/java/com/mag/featurematching/activities/: CameraViewerActivity.kt  MainActivity.kt
app/src/main/java/com/mag/featurematching/bindingadapters/: ImageViewBindingAdapters.kt
app/src/main/res/layout/: activity_camera_viewer.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mag/featurematching/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
imageprocessor/: build.gradle
imageprocessor/src/androidTest/java/com/mag/imageprocessor/: ExampleInstrumentedTest.kt
imageprocessor/src/main/cpp/: CMakeLists.txt
imageprocessor/src/main/cpp/impl/: BitmapGuard.cpp  ImageProcessor.cpp  JniEntry.cpp  VulkanInteractor.cpp  f9.cpp  fast.cpp
imageprocessor/src/main/cpp/include/: BitmapGuard.h  ImageProcessor.h  Utils.h  VulkanInteractor.h  f9.h  fast.h  log.h  shader_utils.h
imageprocessor/src/main/java/com/mag/imageprocessor/: CornerDetectionResult.kt  ImageProcessor.kt  Vulkan.kt
imageprocessor/src/test/java/com/mag/imageprocessor/: ExampleUnitTest.kt
vulkan/: build.gradle
vulkan/src/androidTest/java/com/mag/vulkan/: ExampleInstrumentedTest.kt
vulkan/src/main/cpp/: CmakeLists.txt
vulkan/src/main/cpp/impl/: VulkanInteractor.cpp  VulkanJNIEntry.cpp
vulkan/src/main/cpp/include/: log.h
vulkan/src/main/java/com/mag/vulkan/: Vulkan.kt
vulkan/src/main/shaders/: my_shader.comp
vulkan/src/test/java/com/mag/vulkan/: ExampleUnitTest.kt
(+12 files in other folders)
